src/test/resources/tags/importtag/errors/file-with-error.jinja
{% set test = 'test' %}









{{ test|add(1) }}
